--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
       </div>
 
       <div class="disclaimer">
+        <a href="https://www.geckoterminal.com" target="_blank">View charts on GeckoTerminal</a>
         <strong>Disclaimer:</strong> This is an experimental token and does not represent any financial product or investment instrument. No guarantees of liquidity, value, or market behavior are provided. Use at your own risk.
       </div>
     </div>
