--- a/index.html
+++ b/index.html
@@ -4,7 +4,55 @@
   <meta charset="UTF-8" />
   <title>BTC/USDT Token (Ethereum)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="BTC/USDT — an experimental ERC-20 token on Ethereum for wrapped-asset research, chart visibility testing, and DeFi liquidity experiments." />
+
+  <!-- Primary SEO meta -->
+  <meta name="description" content="BTC/USDT (BTCUSDT) is an experimental ERC-20 token on Ethereum for wrapped-asset research, AMM price discovery, and wallet chart indexing." />
+  <meta name="keywords" content="BTCUSDT, BTC/USDT, Ethereum token, wrapped bitcoin, experimental token, DeFi research, Uniswap, WBTC, GeckoTerminal" />
+  <link rel="canonical" href="https://borisivanov914.github.io/btc-usdt" />
+  <meta name="application-name" content="BTC/USDT Token" />
+  <meta name="theme-color" content="#0b1020" />
+
+  <!-- OpenGraph metadata -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="BTC/USDT Token" />
+  <meta property="og:title" content="BTC/USDT Token (Ethereum)" />
+  <meta property="og:description" content="BTC/USDT is an experimental ERC-20 token on Ethereum designed for wrapped-asset behavior research, BTC-correlated pricing via WBTC, and DeFi liquidity experiments." />
+  <meta property="og:url" content="https://borisivanov914.github.io/btc-usdt" />
+  <meta property="og:image" content="https://borisivanov914.github.io/btc-usdt/btcusdt.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+
+  <!-- Twitter Card metadata -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BTC/USDT Token (Ethereum)" />
+  <meta name="twitter:description" content="BTCUSDT is a research-focused ERC-20 token with an ultra-limited 5-token supply and BTC-correlated price via a BTCUSDT/WBTC pool on Uniswap." />
+  <meta name="twitter:image" content="https://borisivanov914.github.io/btc-usdt/btcusdt.png" />
+  <!-- Optional: якщо буде окремий Twitter-акаунт проекту -->
+  <!-- <meta name="twitter:site" content="@your_handle" /> -->
+
+  <!-- JSON-LD schema.org (structured data) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Cryptocurrency",
+    "name": "BTC/USDT",
+    "alternateName": "BTCUSDT",
+    "symbol": "BTCUSDT",
+    "description": "BTC/USDT (BTCUSDT) is an experimental ERC-20 token on Ethereum Mainnet designed for wrapped-asset behavior research, BTC-correlated pricing via WBTC, and DeFi/AMM experiments.",
+    "image": "https://borisivanov914.github.io/btc-usdt/btcusdt.png",
+    "url": "https://borisivanov914.github.io/btc-usdt",
+    "sameAs": [
+      "https://etherscan.io/token/0xd5a90C85555Ee13863EE2b7a07D4B8807218Ef6b",
+      "https://github.com/borisivanov914/btc-usdt",
+      "https://app.uniswap.org/explore/pools/ethereum/0x45ee60d1c00141ca8b6c8f8b47b913304f4a8f2e9fe6ef8e7be7d538a8c7e2d7"
+    ],
+    "contractAddress": "0xd5a90C85555Ee13863EE2b7a07D4B8807218Ef6b",
+    "blockchain": "Ethereum",
+    "identifier": "BTCUSDT"
+  }
+  </script>
+
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
