--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
       <div class="section">
         <h2>DeFi & Liquidity Usage</h2>
-        <p style="font-size:14px; line-height:1.5;">
+        <p style="font-size:14px; line-height:1.5%;">
           BTC/USDT can be paired on DEX platforms such as Uniswap v2/v3 with:
         </p>
         <ul>
@@ -214,17 +214,24 @@
           <li>WETH,</li>
           <li>USDC.</li>
         </ul>
-        <p style="font-size:14px; line-height:1.5;">
-          These pairs allow researchers to observe on-chain price formation, trading volume, arbitrage dynamics, and chart generation in external aggregators (CoinGecko, CMC).
+        <p style="font-size:14px;">
+          These pairs allow researchers to observe on-chain price formation, trading volume
+		  arbitrage dynamics, and chart generation in external aggregators (CoinGecko, CMC).</br>
         </p>
       </div>
 
       <div class="disclaimer">
-        <a href="https://www.geckoterminal.com" target="_blank">View charts on GeckoTerminal</a>
+        <div style="display:flex; align-items:center; gap:8px; margin-bottom:10px;">
+          <img src="https://borisivanov914.github.io/btc-usdt/geckoterminal_icon.png"
+               alt="GeckoTerminal Icon"
+               style="width:24px; height:24px; border-radius:4px; opacity:0.9;">
+          <a href="https://www.geckoterminal.com" target="_blank" style="font-size:13px;">
+            View charts on GeckoTerminal
+          </a>
+        </div>
         <strong>Disclaimer:</strong> This is an experimental token and does not represent any financial product or investment instrument. No guarantees of liquidity, value, or market behavior are provided. Use at your own risk.
       </div>
     </div>
   </div>
 </body>
 </html>
-
